--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,6 +2,6 @@ appname = quickstart
 httpport = 8080
 runmode = dev
 mysqluser = "root"
-mysqlpass = "rootpass"
+mysqlpass = "123456"
 mysqlurls = "127.0.0.1"
 mysqldb   = "beego"
